@@ -1,4 +1,6 @@
 1.0.1
+Done withdraw window.
+Minor window positioning fixes.
 Minor window type fixes.
 Position fixes for badly placed windows.
 Added "restartwm" to messages.
